--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -40,7 +40,7 @@
     "TitleLiveTV": "TV en Vivo",
     "TitleSync": "Sinc",
     "ButtonDonate": "Donar",
-    "HeaderMyMedia": "My Media",
+    "HeaderMyMedia": "Mis Medios",
     "TitleNotifications": "Notificaciones",
     "ErrorLaunchingChromecast": "Hubo un error iniciando chromecast. Por favor aseg\u00farate de que tu dispositivo este conectado a tu red inalambrica",
     "MessageErrorLoadingSupporterInfo": "Se present\u00f3 un error al cargar la informaci\u00f3n del aficionado. Por favor int\u00e9ntelo m\u00e1s tarde.",
@@ -143,7 +143,7 @@
     "ButtonPlay": "Reproducir",
     "ButtonEdit": "Editar",
     "ButtonQueue": "A cola",
-    "ButtonPlayTrailer": "Reproducir avance",
+    "ButtonPlayTrailer": "Reproducir trailer",
     "ButtonPlaylist": "Lista de Reprod.",
     "ButtonPreviousTrack": "Pista Anterior",
     "LabelEnabled": "Habilitado",
