--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -40,7 +40,7 @@
     "TitleLiveTV": "TV en direct",
     "TitleSync": "Sync.",
     "ButtonDonate": "Faire un don",
-    "HeaderMyMedia": "My Media",
+    "HeaderMyMedia": "Mes medias",
     "TitleNotifications": "Notifications",
     "ErrorLaunchingChromecast": "Une erreur a \u00e9t\u00e9 rencontr\u00e9e lors du lancement de Chromecast. Veuillez vous assurer que votre appareil est bien connect\u00e9 \u00e0 votre r\u00e9seau sans-fil.",
     "MessageErrorLoadingSupporterInfo": "Il y a eu une erreur lors du chargement des informations de supporter. Veuillez r\u00e9essayer plus tard.",
