--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
@@ -44,9 +44,9 @@
     "TitleNotifications": "Notifiche",
     "ErrorLaunchingChromecast": "Si \u00e8 verificato un errore all'avvio di chromecast. Assicurati che il tuo dispositivo sia connesso alla rete wireless.",
     "MessageErrorLoadingSupporterInfo": "Si \u00e8 verificato un errore caricando le  informazioni sui supporter. Si prega di riprovare pi\u00f9 tardi.",
-    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
+    "MessageLinkYourSupporterKey": "Collega il tuo codice Supporter con al massimo {0} membri di Emby per accedere liberamente alle seguenti app:",
     "HeaderConfirmRemoveUser": "Cancellazione utente",
-    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageSwipeDownOnRemoteControl": "Benvenuti nel controllo remoto. Scorri verso il basso ovunque su questa schermata per tornare da dove sei venuto.",
     "MessageConfirmRemoveConnectSupporter": "Sei sicuro di voler rimuovere da questo utente i benefici aggiuntivi da supporter?",
     "ValueTimeLimitSingleHour": "Tempo limite: 1 ora",
     "ValueTimeLimitMultiHour": "Tempo limite: {0} ore",
@@ -100,7 +100,7 @@
     "HeaderWelcomeToProjectWebClient": "Benvenuto nel client web Emby",
     "ButtonTakeTheTour": "Fai una visita",
     "HeaderWelcomeBack": "Ben tornato!",
-    "TitlePlugins": "Plugins",
+    "TitlePlugins": "Plugin",
     "ButtonTakeTheTourToSeeWhatsNew": "Fai un tour per vedere cosa \u00e8 cambiato",
     "MessageNoSyncJobsFound": "Nessuna sincronizzazione pianificata. Creane una utilizzando i pulsanti sull'interfaccia web",
     "HeaderLibraryAccess": "Accesso libreria",
@@ -398,7 +398,7 @@
     "TabMetadata": "Metadati",
     "TabDLNA": "DLNA",
     "TabLiveTV": "Tv indiretta",
-    "TabAutoOrganize": "Organizza Automaticamente",
+    "TabAutoOrganize": "Organizza Autom.",
     "TabPlugins": "Plugins",
     "TabAdvanced": "Avanzato",
     "TabHelp": "Aiuto",
@@ -476,7 +476,7 @@
     "PersonTypePerson": "Persona",
     "LabelTitleDisplayOrder": "Titolo mostrato in ordine:",
     "OptionSortName": "Nome ordinato",
-    "OptionReleaseDate": "Data di uscita",
+    "OptionReleaseDate": "Data di rilascio",
     "LabelSeasonNumber": "Numero Stagione:",
     "LabelDiscNumber": "Disco numero",
     "LabelParentNumber": "Numero superiore",
