--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -404,10 +404,10 @@
     "ButtonRefresh": "Actualiser",
     "ButtonAdvancedRefresh": "Mise \u00e0 jour avanc\u00e9e",
     "OptionPriority": "Priorit\u00e9",
-    "OptionRecordOnAllChannels": "Enregistrer le programme sur toutes les cha\u00eenes",
-    "OptionRecordAnytime": "Enregistrer le programme \u00e0 n'importe quelle heure\/journ\u00e9e",
+    "OptionRecordOnAllChannels": "Enregistrer sur toutes les cha\u00eenes",
+    "OptionRecordAnytime": "Enregistrer \u00e0 n'importe quelle heure\/journ\u00e9e",
     "OptionRecordOnlyNewEpisodes": "Enregistrer seulement les nouveaux \u00e9pisodes",
-    "HeaderRepeatingOptions": "Repeating Options",
+    "HeaderRepeatingOptions": "Options de r\u00e9p\u00e9tition",
     "HeaderDays": "Jours",
     "HeaderActiveRecordings": "Enregistrements actifs",
     "HeaderLatestRecordings": "Derniers enregistrements",
@@ -551,7 +551,7 @@
     "LabelPublicHttpsPort": "Num\u00e9ro de port https public :",
     "LabelPublicHttpsPortHelp": "Le num\u00e9ro de port public \u00e0 mapper sur le port https local.",
     "LabelEnableHttps": "Renvoyer une url https en tant qu'adresse externe",
-    "LabelEnableHttpsHelp": "Activez cette option pour que le serveur renvoie une adresse https aux clients pour son adresse externe. Ceci pourrait faire planter les clients qui ne supportent pas encore l'https.",
+    "LabelEnableHttpsHelp": "Activez cette option pour que le serveur renvoie une adresse https aux clients pour son adresse externe.",
     "LabelHttpsPort": "Num\u00e9ro de port https local :",
     "LabelHttpsPortHelp": "Le port TCP que le serveur https d'Emby doit utiliser.",
     "LabelWebSocketPortNumber": "Num\u00e9ro de port \"Web socket\":",
@@ -888,9 +888,9 @@
     "LabelHomePageSection2": "Seconde section du portail :",
     "LabelHomePageSection3": "Troisi\u00e8me section du portail :",
     "LabelHomePageSection4": "Quatri\u00e8me section du portail:",
-    "OptionMyMediaButtons": "My media (buttons)",
-    "OptionMyMedia": "My media",
-    "OptionMyMediaSmall": "My media (small)",
+    "OptionMyMediaButtons": "Mes m\u00e9dias (boutons)",
+    "OptionMyMedia": "Mes m\u00e9dias",
+    "OptionMyMediaSmall": "Mes m\u00e9dias (petit)",
     "OptionResumablemedia": "Reprendre",
     "OptionLatestMedia": "Les plus r\u00e9cents",
     "OptionLatestChannelMedia": "Items de cha\u00eene les plus r\u00e9cents",
@@ -955,6 +955,7 @@
     "ViewTypeMovieFavorites": "Favoris",
     "ViewTypeMovieGenres": "Genres",
     "ViewTypeMusicLatest": "Dernier",
+    "ViewTypeMusicPlaylists": "Listes de lectures",
     "ViewTypeMusicAlbums": "Albums",
     "ViewTypeMusicAlbumArtists": "Artiste de l'album",
     "HeaderOtherDisplaySettings": "Param\u00e8tres d'affichage",
@@ -1392,26 +1393,29 @@
     "LabelShowLibraryTileNamesHelp": "D\u00e9termine si les noms doivent \u00eatre affich\u00e9s en dessous des affiches de la biblioth\u00e8que sur la page d'accueil",
     "OptionEnableTranscodingThrottle": "Activer le throttling",
     "OptionEnableTranscodingThrottleHelp": "Le throttling consiste \u00e0 ajuster automatiquement la fr\u00e9quence de transcodage afin de minimiser l'utilisation CPU pendant la lecture.",
-    "LabelUploadSpeedLimit": "D\u00e9bit max d'upload (mbps) :",
+    "LabelUploadSpeedLimit": "D\u00e9bit max d'upload (Mbps) :",
     "OptionAllowSyncTranscoding": "Autoriser la synchronisation quand elle n\u00e9cessite un transcodage",
     "HeaderPlayback": "Lecture du m\u00e9dia",
     "OptionAllowAudioPlaybackTranscoding": "Autoriser la lecture de musique n\u00e9cessitant un transcodage",
     "OptionAllowVideoPlaybackTranscoding": "Autoriser la lecture de vid\u00e9os n\u00e9cessitant un transcodage",
     "OptionAllowMediaPlaybackTranscodingHelp": "Les utilisateurs recevront un message d'erreur compr\u00e9hensible lorsque le contenu n'est pas lisible en raison des restrictions appliqu\u00e9es.",
     "TabStreaming": "Streaming",
-    "LabelRemoteClientBitrateLimit": "Limite de d\u00e9bit du client distant (mbps):",
+    "LabelRemoteClientBitrateLimit": "Limite de d\u00e9bit du client distant (Mbps):",
     "LabelRemoteClientBitrateLimitHelp": "Une limite de d\u00e9bit optionnelle du streaming pour tous les clients distant. Utile pour \u00e9viter que les clients demandent une bande passante sup\u00e9rieure \u00e0 ce que votre connexion peu fournir.",
     "LabelConversionCpuCoreLimit": "Limite de c\u0153ur CPU:",
     "LabelConversionCpuCoreLimitHelp": "Limite le nombre de c\u0153ur du processeur utilis\u00e9s pendant le transcodage.",
     "OptionEnableFullSpeedConversion": "Autoriser le transcodage rapide",
-    "OptionEnableFullSpeedConversionHelp": "Par d\u00e9faut, le transcodage est r\u00e9alis\u00e9 de mani\u00e8re lente pour r\u00e9duire la consommation de ressources.",
-    "HeaderPlaylists": "Playlists",
-    "HeaderSelectDate": "Select Date",
-    "HeaderWelcomeExclamation": "Welcome!",
-    "HeaderMyPreferences": "My Preferences",
-    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
-    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
-    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
-    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
-    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
+    "OptionEnableFullSpeedConversionHelp": "Par d\u00e9faut, le transcodage est r\u00e9alis\u00e9 de mani\u00e8re lente pour minimiser la consommation de ressources.",
+    "HeaderPlaylists": "Listes de lecture",
+    "HeaderSelectDate": "S\u00e9lectionnez la date",
+    "HeaderWelcomeExclamation": "Bienvenue !",
+    "HeaderMyPreferences": "Mes pr\u00e9f\u00e9rences",
+    "ButtonMyPreferencesWelcomeYes": "Oui, je voudrais d\u00e9finir mes pr\u00e9f\u00e9rences maintenant.",
+    "ButtonMyPreferencesWelcomeNo": "Non merci, je le ferai plus tard.",
+    "MyPreferencesWelcomeMessage1": "Nous avons pr\u00e9sent\u00e9 votre biblioth\u00e8que d'une mani\u00e8re que nous pensons agr\u00e9able. L'apparence et les regroupements de contenus peuvent \u00eatre modifi\u00e9s \u00e0 tout moment en ajustant vos pr\u00e9f\u00e9rences. Vos pr\u00e9f\u00e9rences s'appliqueront \u00e0 toutes vos applications Emby.",
+    "MyPreferencesWelcomeMessage2": "Voulez-vous d\u00e9finir vos pr\u00e9f\u00e9rences maintenant ?",
+    "ToAccessPreferencesHelp": "Pour acc\u00e9der plus tard \u00e0 vos pr\u00e9f\u00e9rences, cliquez sur l'ic\u00f4ne utilisateur dans le bandeau en haut \u00e0 droite et s\u00e9lectionnez Mes pr\u00e9f\u00e9rences.",
+    "HeaderViewStyles": "Styles d'affichage",
+    "LabelSelectViewStyles": "Activer les pr\u00e9sentations enrichies",
+    "LabelSelectViewStylesHelp": "Si vous activez cette option, l'affichage utilisera les m\u00e9tadonn\u00e9es pour ajouter des cat\u00e9gories telles que Suggestions, Derni\u00e8res, Genres, ... Si vous d\u00e9sactivez cette option, l'affichage sera simplement bas\u00e9 sur les dossiers."
 }
