--- a/MediaBrowser.Server.Implementations/Localization/Server/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/it.json
@@ -21,12 +21,12 @@
     "ButtonQuickStartGuide": "Guida rapida",
     "LabelYourFirstName": "Nome",
     "MoreUsersCanBeAddedLater": "Puoi aggiungere altri utenti in un secondo momento all'interno del pannello di configurazione",
-    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
+    "UserProfilesIntro": "Emby include il supporto integrato per i profili utente, che permette ad ogni utente di avere le proprie impostazioni di visualizzazione, stato di riproduzione e parental control.",
     "LabelWindowsService": "Servizio Windows",
     "AWindowsServiceHasBeenInstalled": "Servizio Windows Installato",
-    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
+    "WindowsServiceIntro1": "Il Server Emby normalmente viene eseguito come un'applicazione del desktop con un'icona sulla barra in basso a destra, ma in alternativa, se si preferisce farlo funzionare come servizio in background, pu\u00f2 essere avviato dal pannello di controllo dei servizi di Windows.",
     "WindowsServiceIntro2": "Se si utilizza il servizio di Windows, si ricorda che non pu\u00f2 essere eseguito allo stesso tempo con l'icona di sistema, quindi devi chiudere l'applicazione al fine di eseguire il servizio. Il servizio dovr\u00e0 anche essere configurato con privilegi amministrativi tramite il pannello di controllo. Si prega di notare che in questo momento il servizio non \u00e8 in grado di Autoaggiornarsi, quindi le nuove versioni richiedono l'interazione manuale",
-    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
+    "WizardCompleted": "Questo \u00e8 tutto ci\u00f2 che serve per ora. Emby ha iniziato a raccogliere informazioni sulla tua libreria di file multimediali. Scopri alcune delle nostre app, quindi clicca su <b>Fine<\/b> per visualizzare il <b>Pannello di controllo del server<\/b>",
     "LabelConfigureSettings": "Configura le impostazioni",
     "LabelEnableVideoImageExtraction": "Abilita estrazione immagine video",
     "VideoImageExtractionHelp": "Per i video che sono sprovvisti di immagini, e per i quali non siamo riusciti a trovare immagini su Internet. Questa opzione allungher\u00e0 il tempo di scansione della tua libreria ma si tradurr\u00e0 in una presentazione pi\u00f9 gradevole.",
@@ -233,7 +233,7 @@
     "ScheduledTasksTitle": "Operazioni Pianificate",
     "TabMyPlugins": "Plugin installati",
     "TabCatalog": "Catalogo",
-    "TitlePlugins": "Plugins",
+    "TitlePlugins": "Plugin",
     "HeaderAutomaticUpdates": "Aggiornamenti Automatici",
     "HeaderNowPlaying": "In Riproduzione",
     "HeaderLatestAlbums": "Ultimi Album",
@@ -568,7 +568,7 @@
     "LabelMinResumePercentageHelp": "I film Sono considerati non visti se fermati prima di questo tempo",
     "LabelMaxResumePercentageHelp": "I film sono considerati visti se fermati dopo questo tempo",
     "LabelMinResumeDurationHelp": "I film pi\u00f9 corti non saranno riprendibili",
-    "TitleAutoOrganize": "Organizza Automaticamente",
+    "TitleAutoOrganize": "Organizza Autom.",
     "TabActivityLog": "Registrazione eventi",
     "HeaderName": "Nome",
     "HeaderDate": "Data",
@@ -955,6 +955,7 @@
     "ViewTypeMovieFavorites": "Preferiti",
     "ViewTypeMovieGenres": "Generi",
     "ViewTypeMusicLatest": "Ultimi",
+    "ViewTypeMusicPlaylists": "Playlist",
     "ViewTypeMusicAlbums": "Album",
     "ViewTypeMusicAlbumArtists": "Album Artisti",
     "HeaderOtherDisplaySettings": "Impostazioni Video",
@@ -973,7 +974,7 @@
     "LabelProtocolInfo": "Info protocollo:",
     "LabelProtocolInfoHelp": "Il valore che verr\u00e0 utilizzato quando si risponde a richieste GetProtocolInfo dal dispositivo.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Emby includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
+    "HeaderKodiMetadataHelp": "Emby include il supporto nativo per i file di metadati di tipo NFO. Per attivare o disattivare i metadati NFO, utilizza la scheda Avanzate per configurare le opzioni per i tuoi tipi di file multimediali.",
     "LabelKodiMetadataUser": "Sincronizza i dati utente a nfo di per:",
     "LabelKodiMetadataUserHelp": "Abilita questa opzione per mantenere i dati di orologio sincronizzati tra il Server Emby e i file NFO.",
     "LabelKodiMetadataDateFormat": "Data di uscita Formato:",
@@ -1146,7 +1147,7 @@
     "LabelEasyPinCode": "Codice Pin",
     "EasyPasswordHelp": "Il codice pin facile viene utilizzato per l'accesso offline con le app Emby supportate, e pu\u00f2 essere utilizzato anche per una facile accesso in rete.",
     "LabelInNetworkSignInWithEasyPassword": "Abilita l'accesso da rete locale tramite codice PIN.",
-    "LabelInNetworkSignInWithEasyPasswordHelp": "If enabled, you'll be able to use your easy pin code to sign in to Emby apps from inside your home network. Your regular password will only be needed away from home. If the pin code is left blank, you won't need a password within your home network.",
+    "LabelInNetworkSignInWithEasyPasswordHelp": "Se attivata, sarai in grado di utilizzare il tuo codice pin facile per accedere alle app di Emby all'interno della tua rete domestica. La tua password usuale sar\u00e0 necessaria solo per accedere alle app quando sei fuori casa. Se il codice PIN viene lasciato vuoto, non avrai bisogno di una password quando sei all'interno della tua rete domestica.",
     "HeaderPassword": "Password",
     "HeaderLocalAccess": "Accesso locale",
     "HeaderViewOrder": "Visualizza ordine",
@@ -1255,7 +1256,7 @@
     "LabelExtractChaptersDuringLibraryScanHelp": "Se abilitata, le immagini capitolo verranno estratti quando i video vengono importati durante la scansione della libreria. Se disabilitata verranno estratti durante le immagini dei capitoli programmati compito, permettendo la scansione biblioteca regolare per completare pi\u00f9 velocemente.",
     "LabelConnectGuestUserName": "Username di Emby o indirizzo email:",
     "LabelConnectUserName": "Username\/email di Emby:",
-    "LabelConnectUserNameHelp": "Connect this user to an Emby account to enable easy sign-in access from any Emby app without having to know the server ip address.",
+    "LabelConnectUserNameHelp": "Collegare questo utente a un account Emby per consentire un facile accesso da qualsiasi app Emby senza dover conoscere l'indirizzo IP del server.",
     "ButtonLearnMoreAboutEmbyConnect": "Scopri di pi\u00f9 su Emby Connect",
     "LabelExternalPlayers": "Player esterni:",
     "LabelExternalPlayersHelp": "Pulsanti di visualizzazione di riprodurre contenuti in lettori esterni. Questo \u00e8 disponibile solo su dispositivi che supportano schemi URL, generalmente Android e iOS. Con i giocatori esterni vi \u00e8 generalmente alcun supporto per il controllo remoto o ripresa.",
@@ -1389,9 +1390,9 @@
     "HeaderUpcomingPrograms": "Programmi in arrivo",
     "ButtonMoreItems": "Pi\u00f9...",
     "LabelShowLibraryTileNames": "Mostra i nomi di file di libreria",
-    "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
+    "LabelShowLibraryTileNamesHelp": "Determina se le etichette vengono visualizzate sotto le locandine della libreria sulla home page",
     "OptionEnableTranscodingThrottle": "Abilita il throttling",
-    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
+    "OptionEnableTranscodingThrottleHelp": "Il Throttling regola automaticamente la velocit\u00e0 di transcodifica per ridurre al minimo l'utilizzo della CPU del server durante la riproduzione.",
     "LabelUploadSpeedLimit": "Velocit\u00e0 limite di upload (Mbps)",
     "OptionAllowSyncTranscoding": "Abilita la sincronizzazione che necessita di transcodifica",
     "HeaderPlayback": "Riproduzione",
@@ -1400,7 +1401,7 @@
     "OptionAllowMediaPlaybackTranscodingHelp": "Gli utenti riceveranno messaggi esplicativi quando il contenuto non \u00e8 riproducibile a causa della policy.",
     "TabStreaming": "Streaming",
     "LabelRemoteClientBitrateLimit": "Bitrate limite del client remoto (Mbps):",
-    "LabelRemoteClientBitrateLimitHelp": "An optional streaming bitrate limit for all remote clients. This is useful to prevent clients from requesting a higher bitrate than your connection can handle.",
+    "LabelRemoteClientBitrateLimitHelp": "Limite opzionale al bitrate dello streaming per tutti i client remoti. E' utile per evitare che i client richiedano un bitrate superiore a quello che la tua connessione \u00e8 in grado di gestire.",
     "LabelConversionCpuCoreLimit": "Limite della CPU:",
     "LabelConversionCpuCoreLimitHelp": "Limiita il numero di CPU da utilizzare durante l'operazione di sincronizzazione.",
     "OptionEnableFullSpeedConversion": "Abilita conversione a velocit\u00e0 piena",
@@ -1411,7 +1412,10 @@
     "HeaderMyPreferences": "Le miei preferenze",
     "ButtonMyPreferencesWelcomeYes": "Grazie, preferisco impostare le mie preferenze adesso",
     "ButtonMyPreferencesWelcomeNo": "No grazie, provveder\u00f2 in seguito.",
-    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
+    "MyPreferencesWelcomeMessage1": "Abbiamo presentato la tua libreria in un modo in cui pensiamo ti possa piacere. L'aspetto e il raggruppamento dei contenuti possono essere cambiati in qualsiasi momento modificando le preferenze. Le preferenze si applicano a tutte le app Emby.",
     "MyPreferencesWelcomeMessage2": "Desideri impostare le tue preferenze ora?",
-    "ToAccessPreferencesHelp": "Per accedere alle preferenze in un secondo tempo, fare clic sull'icona utente presente in alto a destra e seleziona Le Mie Preferenze."
+    "ToAccessPreferencesHelp": "Per accedere alle preferenze in un secondo tempo, fare clic sull'icona utente presente in alto a destra e seleziona Le Mie Preferenze.",
+    "HeaderViewStyles": "Stili Viste",
+    "LabelSelectViewStyles": "Abilita presentazioni arricchite per:",
+    "LabelSelectViewStylesHelp": "Se abilitato, le viste verranno create con i metadati per offrire categorie come Suggeriti, Recenti, Generi e altro. Se disabilitato, verranno mostrate come semplici cartelle."
 }
