--- a/MediaBrowser.Server.Implementations/Localization/Server/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nb.json
@@ -53,22 +53,22 @@
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
     "LabelPinCode": "Pin kode:",
     "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
-    "HeaderSync": "Sync",
+    "HeaderSync": "Synk.",
     "ButtonOk": "Ok",
     "ButtonCancel": "Avbryt",
-    "ButtonExit": "Exit",
+    "ButtonExit": "Avslutt",
     "ButtonNew": "Ny",
     "HeaderTV": "TV",
     "HeaderAudio": "Lyd",
     "HeaderVideo": "Video",
     "HeaderPaths": "Stier",
     "CategorySync": "Synk",
-    "TabPlaylist": "Playlist",
+    "TabPlaylist": "Spilleliste",
     "HeaderEasyPinCode": "Enkel PIN-kode",
     "HeaderGrownupsOnly": "Grown-ups Only!",
     "DividerOr": "-- eller --",
     "HeaderInstalledServices": "Installerte programtillegg",
-    "HeaderAvailableServices": "Available Services",
+    "HeaderAvailableServices": "Tilgjengelige tjenester",
     "MessageNoServicesInstalled": "No services are currently installed.",
     "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
     "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
@@ -109,7 +109,7 @@
     "ReferToMediaLibraryWiki": "Se i wik for media-biblioteket.",
     "LabelCountry": "Land:",
     "LabelLanguage": "Spr\u00e5k:",
-    "LabelTimeLimitHours": "Time limit (hours):",
+    "LabelTimeLimitHours": "Tidsbegrensning (timer):",
     "ButtonJoinTheDevelopmentTeam": "Bli med i utvikler-teamet",
     "HeaderPreferredMetadataLanguage": "Foretrukket spr\u00e5k for metadata",
     "LabelSaveLocalMetadata": "Lagre cover og metadata i medie-mappene",
@@ -295,7 +295,7 @@
     "CheckoutKnowledgeBase": "Check out our knowledge base to help you get the most out of Emby.",
     "SearchKnowledgeBase": "S\u00f8k kunnskapsbasen",
     "VisitTheCommunity": "Bes\u00f8k oss",
-    "VisitProjectWebsite": "Visit the Emby Web Site",
+    "VisitProjectWebsite": "Bes\u00f8k Emby Media",
     "VisitProjectWebsiteLong": "Visit the Emby Web site to catch the latest news and keep up with the developer blog.",
     "OptionHideUser": "Skjul brukere fra logginn-skjermen",
     "OptionHideUserFromLoginHelp": "Praktisk for private eller skjulte administratorer. Brukeren vil m\u00e5tte logge inn manuelt ved \u00e5 skrive inn brukernavn og passord.",
@@ -551,7 +551,7 @@
     "LabelPublicHttpsPort": "Offentlig HTTPS port:",
     "LabelPublicHttpsPortHelp": "Den offentlige porten som den lokale porten kobles til.",
     "LabelEnableHttps": "Oppgi HTTPS som ekstern adresse",
-    "LabelEnableHttpsHelp": "Hvis denne er aktivert vil serveren oppgi en HTTPS URL som sin eksterne adresse. Dette kan \u00f8delegge for klienter som enda ikke st\u00f8tter HTTPS.",
+    "LabelEnableHttpsHelp": "Hvis denne er aktivert vil serveren oppgi en HTTPS URL som sin eksterne adresse. Dette kan \u00f8delegge for klienter som enda ikke st\u00f8tter HTTPS",
     "LabelHttpsPort": "Lokal HTTPS port:",
     "LabelHttpsPortHelp": "The tcp port number that Emby's https server should bind to.",
     "LabelWebSocketPortNumber": "Web socket portnummer:",
@@ -955,6 +955,7 @@
     "ViewTypeMovieFavorites": "Favoritter",
     "ViewTypeMovieGenres": "Sjangere",
     "ViewTypeMusicLatest": "Siste",
+    "ViewTypeMusicPlaylists": "Playlists",
     "ViewTypeMusicAlbums": "Albumer",
     "ViewTypeMusicAlbumArtists": "Album artister",
     "HeaderOtherDisplaySettings": "Visnings Innstillinger",
@@ -1413,5 +1414,8 @@
     "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
     "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
     "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
-    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
+    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences.",
+    "HeaderViewStyles": "View Styles",
+    "LabelSelectViewStyles": "Enable rich presentations for:",
+    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders."
 }
