--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -40,7 +40,7 @@
     "TitleLiveTV": "TV ao Vivo",
     "TitleSync": "Sinc",
     "ButtonDonate": "Doar",
-    "HeaderMyMedia": "My Media",
+    "HeaderMyMedia": "Minha M\u00eddia",
     "TitleNotifications": "Notifica\u00e7\u00f5es",
     "ErrorLaunchingChromecast": "Ocorreu um erro ao iniciar o chromecast. Por favor verifique se seu dispositivo est\u00e1 conectado \u00e0 sua rede sem fio.",
     "MessageErrorLoadingSupporterInfo": "Ocorreu um erro ao carregar a informa\u00e7\u00e3o do colaborador. Por favor, tente novamente mais tarde.",
