--- a/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
@@ -407,7 +407,7 @@
     "OptionRecordOnAllChannels": "Grabar en todos los canales",
     "OptionRecordAnytime": "Grabar en cualquier momento",
     "OptionRecordOnlyNewEpisodes": "Grabar s\u00f3lo nuevos episodios",
-    "HeaderRepeatingOptions": "Repeating Options",
+    "HeaderRepeatingOptions": "Opciones de repetici\u00f3n",
     "HeaderDays": "D\u00edas",
     "HeaderActiveRecordings": "Grabaciones Activas",
     "HeaderLatestRecordings": "Grabaciones Recientes",
@@ -888,9 +888,9 @@
     "LabelHomePageSection2": "Pagina de Inicio secci\u00f3n dos:",
     "LabelHomePageSection3": "Pagina de Inicio secci\u00f3n tres:",
     "LabelHomePageSection4": "Pagina de Inicio secci\u00f3n cuatro:",
-    "OptionMyMediaButtons": "My media (buttons)",
-    "OptionMyMedia": "My media",
-    "OptionMyMediaSmall": "My media (small)",
+    "OptionMyMediaButtons": "Mis medios (botones)",
+    "OptionMyMedia": "Mis medios",
+    "OptionMyMediaSmall": "Mis medios (peque\u00f1o)",
     "OptionResumablemedia": "Continuar",
     "OptionLatestMedia": "Medios recientes",
     "OptionLatestChannelMedia": "Elementos recientes de canales",
@@ -955,6 +955,7 @@
     "ViewTypeMovieFavorites": "Favoritos",
     "ViewTypeMovieGenres": "G\u00e9neros",
     "ViewTypeMusicLatest": "Recientes",
+    "ViewTypeMusicPlaylists": "Listas",
     "ViewTypeMusicAlbums": "\u00c1lbumes",
     "ViewTypeMusicAlbumArtists": "Artistas del \u00c1lbum",
     "HeaderOtherDisplaySettings": "Configuraci\u00f3n de Pantalla",
@@ -1405,13 +1406,16 @@
     "LabelConversionCpuCoreLimitHelp": "L\u00edmitar el n\u00famero de n\u00facleos del CPI que ser\u00e1n utilizados durante la conversi\u00f3n de sincronizaci\u00f3n.",
     "OptionEnableFullSpeedConversion": "Habilitar conversi\u00f3n a m\u00e1xima velocidad",
     "OptionEnableFullSpeedConversionHelp": "Por defecto, la conversi\u00f3n es realizada a baja velocidad para minimizar el consumo de recursos.",
-    "HeaderPlaylists": "Playlists",
-    "HeaderSelectDate": "Select Date",
-    "HeaderWelcomeExclamation": "Welcome!",
-    "HeaderMyPreferences": "My Preferences",
-    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
-    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
-    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
-    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
-    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
+    "HeaderPlaylists": "Listas",
+    "HeaderSelectDate": "Seleccionar fecha",
+    "HeaderWelcomeExclamation": "\u00a1Bienvenido!",
+    "HeaderMyPreferences": "Mi Configuraci\u00f3n",
+    "ButtonMyPreferencesWelcomeYes": "Si, me gustar\u00eda ajustar mi configuraci\u00f3n ahora.",
+    "ButtonMyPreferencesWelcomeNo": "No gracias, lo har\u00e9 luego.",
+    "MyPreferencesWelcomeMessage1": "Configuramos la apariencia de tu biblioteca de una forma que pensamos que te gustar\u00eda. Puedes cambiar la apariencia y agrupaci\u00f3n del contenido cuando quieras en tu configuraci\u00f3n. Tu configuraci\u00f3n se aplicar\u00e1 a todas las aplicaciones de Emby.",
+    "MyPreferencesWelcomeMessage2": "\u00bfTe gustar\u00eda ajustar tu configuraci\u00f3n ahora?",
+    "ToAccessPreferencesHelp": "Para acceder a tu configuraci\u00f3n luego, haz clic en tu icono de usuario en la esquina superior derecha y selecciona Mi Configuraci\u00f3n.",
+    "HeaderViewStyles": "Ver Estilos",
+    "LabelSelectViewStyles": "Activar presentaciones completas para:",
+    "LabelSelectViewStylesHelp": "Si se activa, las diferentes vistas usar\u00e1n metada para mostrar categor\u00edas como Sugerencias, \u00daltimos, G\u00e9neros, y m\u00e1s. Si est\u00e1 desactivado, se mostrar\u00e1n como carpetas comunes."
 }
