--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -404,10 +404,10 @@
     "ButtonRefresh": "Atualizar",
     "ButtonAdvancedRefresh": "Atualiza\u00e7\u00e3o Avan\u00e7ada",
     "OptionPriority": "Prioridade",
-    "OptionRecordOnAllChannels": "Gravar programa em todos os canais",
-    "OptionRecordAnytime": "Gravar programa a qualquer hora",
+    "OptionRecordOnAllChannels": "Gravar em todos os canais",
+    "OptionRecordAnytime": "Gravar a qualquer hora",
     "OptionRecordOnlyNewEpisodes": "Gravar apenas novos epis\u00f3dios",
-    "HeaderRepeatingOptions": "Repeating Options",
+    "HeaderRepeatingOptions": "Op\u00e7\u00f5es de Repeti\u00e7\u00e3o",
     "HeaderDays": "Dias",
     "HeaderActiveRecordings": "Grava\u00e7\u00f5es Ativas",
     "HeaderLatestRecordings": "Grava\u00e7\u00f5es Recentes",
@@ -551,7 +551,7 @@
     "LabelPublicHttpsPort": "N\u00famero da porta p\u00fablica de https:",
     "LabelPublicHttpsPortHelp": "O n\u00famero da porta p\u00fablica que dever\u00e1 ser mapeada para a porta local de https.",
     "LabelEnableHttps": "Reportar https como um endere\u00e7o externo",
-    "LabelEnableHttpsHelp": "Se ativado, o servidor ir\u00e1 reportar uma url https para os clientes como um endere\u00e7o externo. Isto pode prejudicar o funcionamento de clientes que ainda n\u00e3o suportam https.",
+    "LabelEnableHttpsHelp": "Se ativado, o servidor ir\u00e1 reportar uma url https para os clientes como um endere\u00e7o externo.",
     "LabelHttpsPort": "N\u00famero da porta local de https:",
     "LabelHttpsPortHelp": "O n\u00famero da porta tcp que o servidor https do Emby deveria se conectar.",
     "LabelWebSocketPortNumber": "N\u00famero da porta do web socket:",
@@ -888,9 +888,9 @@
     "LabelHomePageSection2": "Tela de in\u00edcio se\u00e7\u00e3o 2:",
     "LabelHomePageSection3": "Tela de in\u00edcio se\u00e7\u00e3o 3:",
     "LabelHomePageSection4": "Tela de in\u00edcio se\u00e7\u00e3o 4:",
-    "OptionMyMediaButtons": "My media (buttons)",
-    "OptionMyMedia": "My media",
-    "OptionMyMediaSmall": "My media (small)",
+    "OptionMyMediaButtons": "Minha m\u00eddia (bot\u00f5es)",
+    "OptionMyMedia": "Minha m\u00eddia",
+    "OptionMyMediaSmall": "Minha m\u00eddia (pequeno)",
     "OptionResumablemedia": "Retomar",
     "OptionLatestMedia": "M\u00eddias recentes",
     "OptionLatestChannelMedia": "Itens recentes de canal",
@@ -955,6 +955,7 @@
     "ViewTypeMovieFavorites": "Favoritos",
     "ViewTypeMovieGenres": "G\u00eaneros",
     "ViewTypeMusicLatest": "Recentes",
+    "ViewTypeMusicPlaylists": "Listas de Reprodu\u00e7\u00e3o",
     "ViewTypeMusicAlbums": "\u00c1lbuns",
     "ViewTypeMusicAlbumArtists": "Artistas do \u00c1lbum",
     "HeaderOtherDisplaySettings": "Ajustes de Exibi\u00e7\u00e3o",
@@ -1392,26 +1393,29 @@
     "LabelShowLibraryTileNamesHelp": "Determina se os t\u00edtulos ser\u00e3o exibidos embaixo das tiles da biblioteca na p\u00e1gina in\u00edcio",
     "OptionEnableTranscodingThrottle": "Ativar controlador de fluxo",
     "OptionEnableTranscodingThrottleHelp": "O controlador de fluxo ajustar\u00e1 automaticamente a velocidade de transcodifica\u00e7\u00e3o para minimizar o uso da cpu no servidor durante a reprodu\u00e7\u00e3o.",
-    "LabelUploadSpeedLimit": "Limite de velocidade de upload (mbps):",
+    "LabelUploadSpeedLimit": "Limite de velocidade de upload (Mbps):",
     "OptionAllowSyncTranscoding": "Permitir sincroniza\u00e7\u00e3o que necessite de transcodifica\u00e7\u00e3o",
     "HeaderPlayback": "Reprodu\u00e7\u00e3o de M\u00eddia",
     "OptionAllowAudioPlaybackTranscoding": "Permitir reprodu\u00e7\u00e3o de \u00e1udio que necessite de transcodifica\u00e7\u00e3o",
     "OptionAllowVideoPlaybackTranscoding": "Permitir reprodu\u00e7\u00e3o de v\u00eddeo que necessite de transcodifica\u00e7\u00e3o",
     "OptionAllowMediaPlaybackTranscodingHelp": "Os usu\u00e1rios receber\u00e3o mensagens de erro amig\u00e1veis quando o conte\u00fado n\u00e3o for reproduz\u00edvel, baseado nas pol\u00edticas.",
     "TabStreaming": "Streaming",
-    "LabelRemoteClientBitrateLimit": "Limite de taxa de bits para o cliente remoto (mbps):",
+    "LabelRemoteClientBitrateLimit": "Limite de taxa de bits para o cliente remoto (Mbps):",
     "LabelRemoteClientBitrateLimitHelp": "Um limite opcional da taxa de bits para todos os clientes remotos. Esta op\u00e7\u00e3o \u00e9 \u00fatil para evitar que os clientes demandem uma taxa de bits maior que a permitida pela sua conex\u00e3o.",
     "LabelConversionCpuCoreLimit": "Limite de n\u00facleos da CPU:",
     "LabelConversionCpuCoreLimitHelp": "Limite o n\u00famero de n\u00facleos da CPU que ser\u00e3o usados durante a convers\u00e3o na sincroniza\u00e7\u00e3o",
     "OptionEnableFullSpeedConversion": "Ativar convers\u00e3o de alta velocidade",
-    "OptionEnableFullSpeedConversionHelp": "Por padr\u00e3o, a convers\u00e3o na sincroniza\u00e7\u00e3o \u00e9 executada em uma velocidade baixa para reduzir o consumo de recursos.",
-    "HeaderPlaylists": "Playlists",
-    "HeaderSelectDate": "Select Date",
-    "HeaderWelcomeExclamation": "Welcome!",
-    "HeaderMyPreferences": "My Preferences",
-    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
-    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
-    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
-    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
-    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
+    "OptionEnableFullSpeedConversionHelp": "Por padr\u00e3o, a convers\u00e3o na sincroniza\u00e7\u00e3o \u00e9 executada em uma velocidade baixa para minimizar o consumo de recursos.",
+    "HeaderPlaylists": "Listas de reprodu\u00e7\u00e3o",
+    "HeaderSelectDate": "Selecionar Data",
+    "HeaderWelcomeExclamation": "Bem Vindo!",
+    "HeaderMyPreferences": "Minhas Prefer\u00eancias",
+    "ButtonMyPreferencesWelcomeYes": "Sim, gostaria de definir minhas prefer\u00eancias agora.",
+    "ButtonMyPreferencesWelcomeNo": "N\u00e3o, obrigado. Farei mais tarde.",
+    "MyPreferencesWelcomeMessage1": "N\u00f3s exibimos sua biblioteca de uma forma que pensamos que ir\u00e1 gostar. A apar\u00eancia e o agrupamento de conte\u00fado podem ser mudados a qualquer hora ajustando suas prefer\u00eancias. Suas prefer\u00eancias ser\u00e3o aplicadas a todas as apps do Emby.",
+    "MyPreferencesWelcomeMessage2": "Gostaria de definir suas prefer\u00eancias agora?",
+    "ToAccessPreferencesHelp": "Para acessar suas prefer\u00eancias mais tarde, clique no \u00edcone do usu\u00e1rio no canto superior direito e selecione Minhas Prefer\u00eancias.",
+    "HeaderViewStyles": "Visualizar Estilos",
+    "LabelSelectViewStyles": "Ativar apresenta\u00e7\u00f5es melhoradas para:",
+    "LabelSelectViewStylesHelp": "Se ativada, as visualiza\u00e7\u00f5es ser\u00e3o feitas com metadados para oferecer categorias como Sugest\u00f5es, Recentes, G\u00eaneros e mais. Se desativada, elas ser\u00e3o exibidas como pastas simples."
 }
