--- a/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
@@ -955,6 +955,7 @@
     "ViewTypeMovieFavorites": "\u6536\u85cf\u5939",
     "ViewTypeMovieGenres": "\u98ce\u683c",
     "ViewTypeMusicLatest": "\u6700\u65b0",
+    "ViewTypeMusicPlaylists": "Playlists",
     "ViewTypeMusicAlbums": "\u4e13\u8f91",
     "ViewTypeMusicAlbumArtists": "\u4e13\u8f91\u827a\u672f\u5bb6",
     "HeaderOtherDisplaySettings": "\u663e\u793a\u8bbe\u7f6e",
@@ -1413,5 +1414,8 @@
     "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
     "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
     "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
-    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
+    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences.",
+    "HeaderViewStyles": "View Styles",
+    "LabelSelectViewStyles": "Enable rich presentations for:",
+    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders."
 }
